src/test/deca/syntax/valid/test_object.deca
// Description:
//   test écrivant un new object
//
// Resultats:
//   Ne doit pas soulever d'erreur
//
// Historique:
//   cree le 14/01/2022

{
    Object o = new Object();

}

