src/test/deca/syntax/invalid/test_empty_block.deca
// Description:
//    test un fichier avec beaucoup de bloc 
//
// Resultats:
//    Ligne 18 : Erreur de syntaxe aux alentours de '{'
//    test_lex ne doit pas donner d'erreur 
//
// Historique:
//    cree le 17/01/2022


{

}

{

}

{

}

